Fixed security issue

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.sqlitrivia"
+        applicationId "com.pm.sqlitrivia"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
