--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-/app/google-sercvices.json
+/app/google-services.json
 .DS_Store
 /build
 /captures
